--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.1.3",
-    "astro": "^2.5.7",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/react": "^3.6.3",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.16",
+    "framer-motion": "^11.12.0",
+    "tailwindcss": "^3.4.15"
   }
 }
