--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.16",
     "framer-motion": "^11.12.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15"
   }
 }
