--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.16",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "framer-motion": "^11.12.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15"
