--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.16",
     "astro-google-fonts-optimizer": "^0.2.2",
+    "fast-average-color": "^9.4.0",
     "framer-motion": "^11.12.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15"
   }
