--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
+    "@upstash/redis": "^1.34.3",
     "astro": "^4.16.16",
     "astro-google-fonts-optimizer": "^0.2.2",
     "fast-average-color": "^9.4.0",
