--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^8.0.0",
     "@upstash/redis": "^1.34.3",
     "astro": "^4.16.16",
     "astro-google-fonts-optimizer": "^0.2.2",
     "fast-average-color": "^9.4.0",
     "framer-motion": "^11.12.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15"
