--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "gbs",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=18.18.0",
+    "pnpm": ">=8.0.0",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -12,7 +18,7 @@
   "dependencies": {
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/vercel": "^8.0.0",
     "@upstash/redis": "^1.34.3",
     "astro": "^4.16.16",
     "astro-google-fonts-optimizer": "^0.2.2",
