--- a/.npmrc
+++ b/.npmrc
@@ -1,12 +1,1 @@
-engine-strict=true
-auto-install-peers=true
-strict-peer-dependencies=false
-shamefully-hoist=true
-prefer-workspace-packages=true
-resolution-mode=highest
-engine-strict-ssw=true
-public-hoist-pattern[]=*types*
-public-hoist-pattern[]=*eslint*
-public-hoist-pattern[]=@prettier/plugin-*
-public-hoist-pattern[]=*prettier-plugin-*
-enable-pre-post-scripts=true 
+legacy-peer-deps=true
